# distributed-systems-practical-couse

./: README.md  docker-compose-test.yml  docker-compose.yml  text-tutorial.md
book-service/: pyproject.toml
book-service/book_service/: main.py
book-service/book_service/core/: logging.py
book-service/book_service/routes/: purchase.py
book-service/book_service/services/: purchases.py
book-service/migrations/versions/: 4c3d6792331c_create_books_table.py
book-service/tests/: conftest.py  helper.py
book-service/tests/test_routes/: test_purchase_routes.py
book-service/tests/test_services/: test_purchase_service.py
common/: pyproject.toml
common/common/core/: database.py  logging.py
common/common/middlewares/: logging.py
common/common/tests/: db_conf.py
coordinator/: pyproject.toml
coordinator/coordinator/clients/: participants.py
coordinator/coordinator/services/: purchases.py
coordinator/tests/: conftest.py  test_purchase_route.py  test_purchase_services.py
k8s/: api_ingress.yml
k8s/book/: book_postgres_deploy.yml  book_postgres_pvc.yml  book_postgres_secret.yml  book_postgres_service.yml  books_deploy.yml  books_service.yml
k8s/coordinator/: coordinator_deploy.yml  coordinator_secret.yml  coordinator_service.yml
k8s/user/: user_postgres_deploy.yml  user_postgres_pvc.yml  user_postgres_secret.yml  user_postgres_service.yml  users_deploy.yml  users_service.yml
user-service/: .env.test  Dockerfile  pyproject.toml
user-service/tests/: conftest.py  helper.py
user-service/user_service/: main.py
(+8 files in other folders)
