[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["Misha4231 <mishagalko1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^9.0.3"
pydantic-settings = "^2.14.0"
pydantic = "^2.13.4"
fastapi = "^0.136.1"
sqlalchemy = "^2.0.49"
structlog = "^25.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
